@@ -331,7 +331,7 @@
                     ((eq? (car nodes) 'node-set) (cadr nodes))
                     (else (car nodes))))
          (interp (get-interp expanded)))
-    (interp expanded context values)))
+    (interp expanded (cons `("x-kahua-expanded-node" . (,expanded)) context) values)))
 
 (define-values (add-interp! get-interp)
   (let ((table (make-hash-table))
@@ -1199,6 +1199,44 @@
 	    (values uri (params-proc kargs))
 	    uri)))))
 
+(define (local-parts auxs context . maybe-params-proc)
+  (define (replace-node node id parts)
+    (define (has-id? node-set)
+      (cond ((null? node-set) #f)
+	    ((list? node-set) (cond ((assq-ref node-set '@)
+				     => (cut member `(id ,id) <>))
+				    (else #f)))
+	    (else #f)))
+    (cond ((null? node) node)
+	  ((list? node)
+	   (cond ((symbol? (car node))
+		  (if (has-id? (cdr node))
+		      parts
+		      (cons (car node) (replace-node (cdr node) id parts))))
+		 (else (cons (replace-node (car node) id parts)
+			     (replace-node (cdr node) id parts)))))
+	  (else node)))
+
+  (lambda (clause)
+    (receive (pargs kargs) (extract-cont-args (cdr clause) 'a/cont)
+      (let* ((params-proc (get-optional maybe-params-proc #f))
+	     (argstr (build-argstr pargs (if params-proc '() kargs)))
+	     (tid (car (assq-ref auxs 'target)))
+	     (external-node (assoc-ref context "x-kahua-expanded-node"))
+	     (id (session-cont-register
+		  (lambda ()
+		    (let* ((nodes (apply (car clause) (cdr clause)))
+			   (expanded (cond 
+				      ((procedure? nodes) (car (rev-nodes (exec '() nodes)))) 
+				      ((eq? (car nodes) 'node-set) (cadr nodes))
+				      (else (car nodes)))))
+		      (or (and external-node (replace-node external-node tid expanded))
+			  (list (list 'html expanded)))))))
+	     (uri (kahua-self-uri #`",|id|,|argstr|,(fragment auxs)")))
+	(if params-proc
+	    (values uri (params-proc kargs))
+	    uri)))))
+
 (define (remote-cont auxs . maybe-params-proc)
   (lambda (clause)
     (define (return-cont-uri)
@@ -1226,6 +1264,7 @@
 (define (%a/cont-handler _ attrs auxs contents context cont)
   (define (auxs->uri auxs)
     (cond ((assq-ref auxs 'cont)        => (local-cont  auxs))
+	  ((assq-ref auxs 'parts-cont)  => (local-parts auxs context))
 	  ((assq-ref auxs 'remote-cont) => (remote-cont auxs))
 	  (else                            (kahua-self-uri (fragment auxs)))))
 
@@ -1263,9 +1302,11 @@
 		'()
 		kargs))
   (define (auxs->uri&hiddens auxs)
-    (cond ((assq-ref auxs 'cont)        => (local-cont auxs kargs->hiddens))
-	  ((assq-ref auxs 'remote-cont) => (remote-cont auxs kargs->hiddens))
-	  (else                            (values (kahua-self-uri (fragment auxs)) '()))))
+    (cond ((assq-ref auxs 'cont)              => (local-cont auxs kargs->hiddens))
+	  ((and (assq-ref auxs 'target)  ;; require target attr for self attr.
+		(assq-ref auxs 'parts-cont))  => (local-parts auxs context kargs->hiddens))
+	  ((assq-ref auxs 'remote-cont)       => (remote-cont auxs kargs->hiddens))
+	  (else                               (values (kahua-self-uri (fragment auxs)) '()))))
   (define (nodes uri method hiddens)
     (cont `((form (@@ (expand-finished))
 		  (@ ,@(list* `(method ,method)
